--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
-
+<!DOCTYPE html>
+ <head>   
+  <meta charset="utf-8"> 
+  <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+ </head>
+ <body>
+  <div id="centerLayer">
+    <center>
+      <big>
+    <h3>
+    <p><SPAN STYLE="BACKGROUND-COLOR: #9ACD32">Геометрія:</SPAN></p>
+    </h3>
+ <mark> 
+ <i> 
+ <ul> 
+   <li>Планіметрія</li>
+  <li>Стереометрія</li>
+  <li>Тригонометрія</li>
+  </ul>
+ </i>
+ </mark>
+ </big>
+ <p><img src="images/Geometriya.jpg" alt="Геометричні фігури"></p>
+  </center>
+  </div>
+   </body>
+</html>
