--- a/1.html
+++ b/1.html
@@ -1,6 +1,6 @@
 <html>
 <head>
- <link rel="shortcut icon" href="/favicon.ico.png" type="images/x-icon" />
+ <link rel="shortcut icon" href="/favicon.ico" type="images/x-icon" />
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
     <center>
