--- a/1.html
+++ b/1.html
@@ -7,7 +7,7 @@
     <p>
     <img src="Lines-PNG-Transparent-Image-1.png" alt="Лінії" width="120" height="120">
     <img src="laptope_011.png" alt="Ноутбук" width="120" height="120">  
-    <img src="Lines-PNG-Transparent-Image-2.png" alt="Лінії" width="120" height="120">
+    <img src="Image-2.png" alt="Лінії" width="120" height="120">
   </p>
     </center>
     <center><h1>Основи WEB-програмування</h1></center>
