--- a/1.html
+++ b/1.html
@@ -7,7 +7,7 @@
     <p>
     <img src="Lines-PNG-Transparent-Image-1.png" alt="Лінії" width="120" height="120">
     <img src="laptope_011.png" alt="Ноутбук" width="120" height="120">  
-    <img src="Image-2.png" alt="Лінії" width="120" height="120">
+    <img src="Lines-PNG-Transparent-Image-2.png" alt="Лінії" width="120" height="120">
   </p>
     </center>
     <center><h1>Основи WEB-програмування</h1></center>
@@ -17,10 +17,10 @@
  <body>
  <center><p><strong><h2>Посилання на виконані завдання</h2></strong></p>
         <ol { width: 200px; margin: auto; }><h3>
-        <li>Лабораторна</li>
-        <li>Лабораторна</li>
-        <li>Лабораторна</li>
-        <li>Лабораторна</li>
+        <center><li>Лабораторна</li></center>
+        <center><li>Лабораторна</li></center>
+        <center><li>Лабораторна</li></center>
+        <center><li>Лабораторна</li></center>
         </h3></ol>
 <style>
 	a:hover { color:red ; text-decoration:none;}
