--- a/1.html
+++ b/1.html
@@ -17,10 +17,10 @@
  <body>
  <center><p><strong><h2>Посилання на виконані завдання</h2></strong></p>
         <ol { width: 200px; margin: auto; }><h3>
-        <center><li>Лабораторна</li></center>
-        <center><li>Лабораторна</li></center>
-        <center><li>Лабораторна</li></center>
-        <center><li>Лабораторна</li></center>
+        <li>Лабораторна</li>
+        <li>Лабораторна</li>
+        <li>Лабораторна</li>
+        <li>Лабораторна</li>
         </h3></ol>
 <style>
 	a:hover { color:red ; text-decoration:none;}
