--- a/1.html
+++ b/1.html
@@ -1,3 +1,8 @@
+<style>
+background-image:url('/img/destop.png');
+background-repeat: repeat;
+background-size:100%;
+</style>
 <html>
 <head>
  <link rel="shortcut icon" href="/favicon.ico" type="images/x-icon" />
@@ -10,18 +15,17 @@
     <img src="Lines-PNG-Transparent-Image-2.png" alt="Лінії" width="120" height="120">
   </p>
     </center>
-    <center><h1>Основи WEB-програмування</h1></center>
+    <center><color 000066><h1 style="color:000066;">Основи WEB-програмування</h1></color></center>
     <title>Основи WEB-програмування</title>    
    <meta name="description" content="Основи WEB-програмування, html, css." />
- </head>
+ </head>  
  <body>
- <center><p><strong><h2>Посилання на виконані завдання</h2></strong></p>
-        <ol { width: 200px; margin: auto; }><h3>
-        <li>Лабораторна</li>
-        <li>Лабораторна</li>
-        <li>Лабораторна</li>
-        <li>Лабораторна</li>
-        </h3></ol>
+ <center><p><strong><h2 style="color:000066;">Посилання на виконані завдання</h2></strong></p>
+        <div>
+      <h3><a title="Лабораторна" target="_blank" href="lab1.html"; onclick="return confirm('Перейти до лабораторної №1?');">Лабораторна №1</a>
+        <h3><a title="Лабораторна" target="_blank" href="lab2.html"; onclick="return confirm('Перейти до лабораторної №2?');">Лабораторна №2</a>
+        <h3><a title="Лабораторна" target="_blank" href="lab3.html"; onclick="return confirm('Перейти до лабораторної №3?');">Лабораторна №3</a>
+    </div>
 <style>
 	a:hover { color:red ; text-decoration:none;}
 </style>
