--- a/1.html
+++ b/1.html
@@ -1,7 +1,12 @@
 <style>
-background-image:url('/img/destop.png');
-background-repeat: repeat;
-background-size:100%;
+<div> {
+background-color: #FCF8F7;
+height: 120px;
+background-image: url(images/1465176_noutbuk-risunok-karandashom.jpg);
+background-position: left bottom;
+background-repeat: repeat-x;
+}
+</div>
 </style>
 <html>
 <head>
@@ -52,4 +57,5 @@ background-size:100%;
     <div class="footer"></div>
 </div>
 </body>
+
  </html>
