--- a/1.html
+++ b/1.html
@@ -1,13 +1,3 @@
-<style>
-<div> {
-background-color: #FCF8F7;
-height: 120px;
-background-image: url(images/1465176_noutbuk-risunok-karandashom.jpg);
-background-position: left bottom;
-background-repeat: repeat-x;
-}
-</div>
-</style>
 <html>
 <head>
  <link rel="shortcut icon" href="/favicon.ico" type="images/x-icon" />
@@ -24,7 +14,9 @@ background-repeat: repeat-x;
     <title>Основи WEB-програмування</title>    
    <meta name="description" content="Основи WEB-програмування, html, css." />
  </head>  
- <body>
+  <body background="images/bg.jpg">  
+ </body>
+ <body>    
  <center><p><strong><h2 style="color:000066;">Посилання на виконані завдання</h2></strong></p>
         <div>
       <h3><a title="Лабораторна" target="_blank" href="lab1.html"; onclick="return confirm('Перейти до лабораторної №1?');">Лабораторна №1</a>
@@ -57,5 +49,3 @@ background-repeat: repeat-x;
     <div class="footer"></div>
 </div>
 </body>
-
- </html>
