--- a/1.html
+++ b/1.html
@@ -1,5 +1,7 @@
 <html>
 <head>
+<body bgcolor="#ccffff">  
+</body>
  <link rel="shortcut icon" href="/favicon.ico" type="images/x-icon" />
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
@@ -13,10 +15,9 @@
     <center><color 000066><h1 style="color:000066;">Основи WEB-програмування</h1></color></center>
     <title>Основи WEB-програмування</title>    
    <meta name="description" content="Основи WEB-програмування, html, css." />
- </head>  
-  <body background="images/bg.jpg">  
- </body>
- <body>    
+ </head>    
+ <body>   
+ <bgcolor="ccffff">
  <center><p><strong><h2 style="color:000066;">Посилання на виконані завдання</h2></strong></p>
         <div>
       <h3><a title="Лабораторна" target="_blank" href="lab1.html"; onclick="return confirm('Перейти до лабораторної №1?');">Лабораторна №1</a>
