--- a/table.html
+++ b/table.html
@@ -76,7 +76,7 @@
 height: 250px;
 width: 250px:
 padding: 1px;
-border: 2px solid #ccc;">
+border: 2px solid>
 <xmp>
  <style type="text/css">
    TABLE {
