--- a/table.html
+++ b/table.html
@@ -72,6 +72,11 @@
           <td>e</td>
         </tr>
 </table></div>
+<div style="overflow: auto;
+height: 250px;
+width: 250px:
+padding: 1px;
+border: 2px solid #ccc;"></div>
 <xmp>
  <style type="text/css">
    TABLE {
