--- a/1.html
+++ b/1.html
@@ -21,7 +21,7 @@
  <center><p><strong><h2 style="color:000066;">Посилання на виконані завдання</h2></strong></p>
         <div>
       <h3><a title="Лабораторна" target="_blank" href="1.html"; onclick="return confirm('Перейти до лабораторної №1?');">Лабораторна №1</a>
-        <h3><a title="Лабораторна" target="_blank" href="table.htmll"; onclick="return confirm('Перейти до лабораторної №2?');">Лабораторна №2</a>
+        <h3><a title="Лабораторна" target="_blank" href="table.html"; onclick="return confirm('Перейти до лабораторної №2?');">Лабораторна №2</a>
         <h3><a title="Лабораторна" target="_blank" href="lab3.html"; onclick="return confirm('Перейти до лабораторної №3?');">Лабораторна №3</a>
     </div>
 <style>
